--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!--GitHub link: https://crunkbox.github.io/wdd131/ -->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -16,7 +17,7 @@
 
     </main>
     <footer>
-        
+
     </footer>
 </body>
 </html>
