--- a/ponder/meta-css.html
+++ b/ponder/meta-css.html
@@ -7,6 +7,7 @@
     <meta name="description" content="An in-depth guide to HTML meta tags.">
     <meta name="author" content="Thomas Meyers">
     <link rel="stylesheet" href="style.css">
+    <script src="week1.js" defer></script>
 </head>
 <body>
     <div id="content">
