Added a dark theme to mission folder

--- a/mission/index.html
+++ b/mission/index.html
@@ -7,8 +7,15 @@
     <meta name="description" content="The Mission Statement of BYU Idaho">
     <meta name="author" content="Thomas Meyers">
     <link rel="stylesheet" href="style.css">
+    <script src="mission.js" defer></script>
 </head>
 <body>
+    <select>
+        <option>Choose Mode</option>
+        <option value="dark">Dark</option>
+        <option value="light">Light</option>
+    </select>
+
     <div id="content">
         <h1>MISSION STATEMENT</h1>
         <p class="subheader">BRIGHAM YOUNG UNIVERSITY-IDAHO</p>
