--- a/coolpics/index.html
+++ b/coolpics/index.html
@@ -6,7 +6,6 @@
     <title>Cool Pics</title>
     <meta name="author" content="Thomas Meyers">
     <link rel="stylesheet" href="coolpics.css">
-    <script src="coolpics.js"></script>
 </head>
 <body>
     <header>
@@ -22,18 +21,25 @@
     </header>
     <main>
         <h2>Current Work</h2>
-        <img src="norris-sm.jpg">
-        <img src="norris-sm.jpg">
-        <img src="norris-sm.jpg">
-        <img src="norris-sm.jpg">
-        <img src="norris-sm.jpg">
-        <img src="norris-sm.jpg">
-        <img src="norris-sm.jpg">
-        <img src="norris-sm.jpg">
-        <img src="norris-sm.jpg">
+        <section class="gallery">
+            <img src="norris-sm.jpg" alt="Mountain Landscape">
+            <img src="norris-sm.jpg" alt="Mountain Landscape">
+            <img src="norris-sm.jpg" alt="Mountain Landscape">
+            <img src="norris-sm.jpg" alt="Mountain Landscape">
+            <img src="norris-sm.jpg" alt="Mountain Landscape">
+            <img src="norris-sm.jpg" alt="Mountain Landscape">
+            <img src="norris-sm.jpg" alt="Mountain Landscape">
+            <img src="norris-sm.jpg" alt="Mountain Landscape">
+            <img src="norris-sm.jpg" alt="Mountain Landscape">
+        </section>
     </main>
     <footer>
         <p>Not a real site</p>
     </footer>
+    <dialog class="image-viewer">
+        <button class="close-viewer">X</button>
+        <img scr="" alt="">
+    </dialog>
+    <script src="coolpics.js"></script>
 </body>
 </html>
